--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -30,9 +30,10 @@
                   <a class="btn btn-success" href="{{ path('category_edit', { 'id': category.id }) }}">
                     <i class="fa fa-pencil"></i>
                   </a>
-                  <a class="btn btn-danger" href="{{ path('category_delete', { 'id': category.id }) }}">
+                  <input class="category_id" value="{{category.id}}" hidden>
+                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
                     <i class="fa fa-trash"></i>
-                  </a>
+                  </button>
                 </td>
               </tr>
             {% else %}
@@ -56,6 +57,28 @@
     </div>
   </div>
 
+  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Eliminar categoría</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>¿Estás seguro de que deseas eliminar esta categoría?</p>
+        </div>
+        <div class="modal-footer">
+          <form class="form_m_d" method="post">
+            <button type="submit" class="btn btn-primary">Eliminar</button>
+          </form>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
 {% block javascripts %}
 
@@ -71,5 +94,13 @@
        "info":     false
     });
   });
+</script>
+
+<script>
+
+$('#category-table').on("click", ".button_delete", function() {
+  var id_category = $(this).closest('tr').find('.category_id').val();
+  $('.form_m_d').attr('action', '/category/'+id_category);
+});
 </script>
 {% endblock %}
