--- a/app/Resources/views/faspecie/index.html.twig
+++ b/app/Resources/views/faspecie/index.html.twig
@@ -16,7 +16,7 @@
         <br>
         <a class="btn btn-info float-right btn-m-r" href="{{ path('faspecie_new') }}">Nueva especie</a>
 
-        <table id="flsubspecie-table" class="table row-border hover stripe" >
+        <table id="faspecie-table" class="table row-border hover stripe" >
           <thead class="thead-dark">
             <tr>
               <th width="70%">Nombre</th>
@@ -31,9 +31,10 @@
                   <a class="btn btn-success" href="{{ path('faspecie_edit', { 'id': fas.id }) }}">
                     <i class="fa fa-pencil"></i>
                   </a>
-                  <a class="btn btn-danger" href="{{ path('faspecie_delete', { 'id': fas.id }) }}">
+                  <input class="faspecie_id" value="{{fas.id}}" hidden>
+                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
                     <i class="fa fa-trash"></i>
-                  </a>
+                  </button>
                 </td>
               </tr>
           {% else %}
@@ -57,6 +58,28 @@
     </div>
   </div>
 
+  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Eliminar Especie</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>¿Estás seguro de que deseas eliminar esta especie?</p>
+        </div>
+        <div class="modal-footer">
+          <form class="form_m_d" method="post">
+            <button type="submit" class="btn btn-primary">Eliminar</button>
+          </form>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
 {% block javascripts %}
 
@@ -73,5 +96,13 @@
        "info":     false
     });
   });
+</script>
+
+<script>
+
+$('#faspecie-table').on("click", ".button_delete", function() {
+  var id_fas = $(this).closest('tr').find('.faspecie_id').val();
+  $('.form_m_d').attr('action', '/faspecie/'+id_fas);
+});
 </script>
 {% endblock %}
