--- a/app/Resources/views/attendant/index.html.twig
+++ b/app/Resources/views/attendant/index.html.twig
@@ -38,9 +38,10 @@
                   <a class="btn btn-success" href="{{ path('attendant_edit', { 'id': attendant.id }) }}">
                     <i class="fa fa-pencil"></i>
                   </a>
-                  <a class="btn btn-danger" href="{{ path('attendant_delete', { 'id': attendant.id }) }}">
+                  <input class="attendant_id" value="{{attendant.id}}" hidden>
+                  <button type="button" class="button_delete btn btn-danger" data-toggle="modal" data-target="#delete_modal">
                     <i class="fa fa-trash"></i>
-                  </a>
+                  </button>
                 </td>
               </tr>
             {% else %}
@@ -64,6 +65,29 @@
     </div>
   </div>
 
+
+  <div class="modal" id='delete_modal' tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Eliminar encargado</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>¿Estás seguro de que deseas eliminar este encargado?</p>
+        </div>
+        <div class="modal-footer">
+          <form class="form_m_d" method="post">
+            <button type="submit" class="btn btn-primary">Eliminar</button>
+          </form>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
 {% block javascripts %}
 
@@ -80,5 +104,13 @@
     });
   });
 </script>
-{% endblock %}
 
+<script>
+
+$('#attendant-table').on("click", ".button_delete", function() {
+  var id_attendant = $(this).closest('tr').find('.attendant_id').val();
+  $('.form_m_d').attr('action', '/attendant/'+id_attendant);
+});
+</script>
+
+{% endblock %}
