--- a/app/Resources/views/fauna/index.html.twig
+++ b/app/Resources/views/fauna/index.html.twig
@@ -13,12 +13,37 @@
 <h2>Individuos Fauna</h2>
 <div class="jumbotron" style="padding-top: 2%; padding-bottom: 1%;">
  <h4>Buscar individuos por:</h4>
-   {{ form_start(form, { 'enctype':"multipart/form-data"}) }}
-       {{ form_widget(form) }}
-       <button id="button" onclick="enviar()" type="submit" class="btn btn-info">Buscar</button>
-       <button id="buttonClear" type="submit" class="btn btn-info">Limpiar filtros</button>
-       <a class="btn btn-info float-right btn-m-r" href="{{ path('fauna_new') }}">Nuevo individuo</a>
-   {{ form_end(form) }}
+  <form action="{{ path('fauna_index') }}" method="get">
+    <div class="form-row" >
+      <div class="form-group col-md-12">
+        <label>Proximo destino</label>
+        <input type="text" id="destination" class="form-control" placeholder="Proximo destino" name="destination">
+      </div>
+     <div class="form-group col-md-6">
+       <label>Encargado</label>
+       <select id="attendants" class="form-control" name="attendants">
+         <option value=""> Seleecione </option>
+       </select>
+     </div>
+     <div class="form-group col-md-3">
+       <label>Especie</label>
+       <select id="specie" class="form-control" name="specie">
+         <option value=""> Seleecione </option>
+       </select>
+     </div>
+     <div class="form-group col-md-3">
+       <label>Sub Especie</label>
+       <select id="subspecie" class="form-control" name="subspecie">
+         <option value=""> Seleecione </option>
+       </select>
+     </div>
+     <div class="form-group col-md-12">
+        <button id="button" type="submit" class="btn btn-info">Buscar</button>
+        <button id="buttonClear" type="submit" class="btn btn-info">Limpiar filtros</button>
+        <a class="btn btn-info float-right btn-m-r" href="{{ path('fauna_new') }}">Nuevo individuo</a>
+     </div>
+   </div> 
+  </form> 
 </div>
   <div class="row">
     <div class="col-md-12 col-center">
@@ -75,10 +100,6 @@
 {% block javascripts %}
 <script src="{{ asset('scripts/dataTables/datatables.min.js') }}"></script>
 <script>
-  $("#appbundle_fauna_destination").removeProp('required');
-  $("#appbundle_fauna_specie").removeProp('required');
-  $("#appbundle_fauna_subspecie").removeProp('required');
-  $("#appbundle_fauna_attendants").removeProp('required');
   $(document).ready(function(){
     $('#fauna-table').DataTable({
       searching: false,
@@ -88,46 +109,85 @@
        "ordering": false,
        "info":     false
     });
-  $('#appbundle_fauna_destination').val(localStorage.getItem('destination'));
-  $('#appbundle_fauna_specie').val(localStorage.getItem('specie'));
-  $('#appbundle_fauna_subspecie').val(localStorage.getItem('subspecie'));
-  $('#appbundle_fauna_attendants').val(localStorage.getItem('attendants'));
-  });
-
-  $('.page-link').click(function(){
-    $('#appbundle_fauna_destination').val(localStorage.getItem('destination'));
-    $('#appbundle_fauna_specie').val(localStorage.getItem('specie'));
-    $('#appbundle_fauna_subspecie').val(localStorage.getItem('subspecie'));
-    $('#appbundle_fauna_attendants').val(localStorage.getItem('attendants'));
-    localStorage.setItem('destination',destination);// para establecer
-    localStorage.setItem('specie',specie);// para establecer
-    localStorage.setItem('subspecie',subspecie);// para establecer
-    localStorage.setItem('attendants',attendants);// para establecer
-    Document.getElementById("button").submit
-  });
-
-
-  $('#button').click(function(){
-    var destination = $('#appbundle_fauna_destination').val();
-    var specie = $('#appbundle_fauna_specie').val();
-    var subspecie = $('#appbundle_fauna_subspecie').val();
-    var attendants = $('#appbundle_fauna_attendants').val();
-    localStorage.setItem('destination',destination);// para establecer
-    localStorage.setItem('specie',specie);// para establecer
-    localStorage.setItem('subspecie',subspecie);// para establecer
-    localStorage.setItem('attendants',attendants);// para establecer
+    $('#destination').val("{{params.destination}}");
+    $('#specie').val("{{params.specie}}");
+    $('#subspecie').val("{{params.subspecie}}");
+    $('#attendants').val("{{params.attendants}}");
   });
 
   $('#buttonClear').click(function() {
-    localStorage.removeItem('destination'); //Llegar.
-    localStorage.removeItem('specie'); //Llegar.
-    localStorage.removeItem('subspecie'); //Llegar.
-    localStorage.removeItem('attendants'); //Llegar.
-    $('#appbundle_fauna_destination').val('');
-    $('#appbundle_fauna_specie').val('');
-    $('#appbundle_fauna_subspecie').val('');
-    $('#appbundle_fauna_attendants').val('');
+    $('#destination').val('');
+    $('#specie').val('');
+    $('#subspecie').val('');
+    $('#attendants').val('');
   });
 
+  $.ajax({
+   url: "{{ path('listJsonAttendant') }}",
+   method: "GET",
+   success: function(data) {
+        var options = "";
+        $.each( data, function( i, option ) {
+          options += "<option value='" + option.id + "'>" + option.name + "</option>";
+        });
+        $("#attendants").append(options);
+        $("#attendants").val("{{params.attendants}}");
+     }
+   });
+
+  $.ajax({
+   url: "{{ path('listJsonFaspecie') }}",
+   method: "GET",
+   success: function(data) {
+     var options = "";
+        $.each( data, function( i, option ) {
+          options += "<option value='" + option.id + "'>" + option.name + "</option>";
+        });
+        $("#specie").append(options);
+        $('#specie').val("{{params.specie}}");
+     }
+   });
+
+  function setSubspecies(){  
+    $.ajax({
+     url: "{{ path('listJsonFasubspecie') }}",
+     method: "GET",
+     success: function(data) {
+       var options = "";
+          $.each( data, function( i, option ) {
+            options += "<option class=\"opSub\" value='" + option.id + "'>" + option.name + "</option>";
+          });
+          $("#subspecie").append(options);
+          $('#subspecie').val("{{params.subspecie}}");
+       }
+     });
+  }
+
+  $('#specie').change(function(){
+    var seleccion = $("#specie").val();
+    if (seleccion != '') {
+      $.ajax({
+       url: "{{ path('listJsonFasubspecie') }}",
+       method: "GET",
+       success: function(data) {
+         var options = "";
+            $.each( data, function( i, option ) {
+              if (option.idSpecie == seleccion) {
+                options += "<option class=\"opSub\" value='" + option.id + "'>" + option.name + "</option>";
+              }
+            });
+            if (options != "") {
+              $(".opSub").remove();
+              $("#subspecie").append(options);
+            }
+         }
+      });
+    }
+    else{
+      $(".opSub").remove();
+      setSubspecies();
+    }
+  });
+ 
 </script>
 {% endblock %}
