--- a/app/Resources/views/flora/index.html.twig
+++ b/app/Resources/views/flora/index.html.twig
@@ -9,11 +9,39 @@
 
 {% block body %}
 <div class="container">
+  <h1>Individuos Flora</h1>
+  <div class="jumbotron" style="padding-top: 2%; padding-bottom: 1%;">
+ <h4>Buscar individuos por:</h4>
+  <form action="{{ path('flora_index') }}" method="get">
+    <div class="form-row" >
+     <div class="form-group col-md-4">
+       <label>Area</label>
+       <select id="area" class="form-control" name="area">
+         <option value=""> Seleecione </option>
+       </select>
+     </div>
+     <div class="form-group col-md-4">
+       <label>Especie</label>
+       <select id="specie" class="form-control" name="specie">
+         <option value=""> Seleecione </option>
+       </select>
+     </div>
+     <div class="form-group col-md-4">
+       <label>Sub Especie</label>
+       <select id="subspecie" class="form-control" name="subspecie">
+         <option value=""> Seleecione </option>
+       </select>
+     </div>
+     <div class="form-group col-md-12">
+        <button id="button" type="submit" class="btn btn-info">Buscar</button>
+        <button id="buttonClear" type="submit" class="btn btn-info">Limpiar filtros</button>
+        <a class="btn btn-info float-right btn-m-r" href="{{ path('flora_new') }}">Nuevo individuo</a>
+     </div>
+   </div> 
+  </form> 
+</div>
   <div class="row">
     <div class="col-md-12 col-center">
-      <h1>Individuos Flora</h1>
-      <br>
-      <a class="btn btn-info float-right btn-m-r" href="{{ path('flora_new') }}">Nuevo individuo</a>
     <table id="flora-table" class="table row-border hover stripe" name="TABLA">
         <thead class="thead-dark">
             <tr>
@@ -80,6 +108,85 @@
        "ordering": false,
        "info":     false
     });
+    $('#specie').val("{{params.specie}}");
+    $('#subspecie').val("{{params.subspecie}}");
+    $('#area').val("{{params.area}}");
   });
+
+  $('#buttonClear').click(function() {
+    $('#specie').val('');
+    $('#subspecie').val('');
+    $('#area').val('');
+  });
+
+  $.ajax({
+   url: "{{ path('listJsonArea') }}",
+   method: "GET",
+   success: function(data) {
+        var options = "";
+        $.each( data, function( i, option ) {
+          options += "<option value='" + option.id + "'>" + option.name + "</option>";
+        });
+        $("#area").append(options);
+        $("#area").val("{{params.area}}");
+     }
+   });
+
+  $.ajax({
+   url: "{{ path('listJsonFlspecie') }}",
+   method: "GET",
+   success: function(data) {
+     var options = "";
+        $.each( data, function( i, option ) {
+          options += "<option value='" + option.id + "'>" + option.name + "</option>";
+        });
+        $("#specie").append(options);
+        $('#specie').val("{{params.specie}}");
+     }
+   });
+
+  function setSubspecies(){  
+    $.ajax({
+     url: "{{ path('listJsonFlsubspecie') }}",
+     method: "GET",
+     success: function(data) {
+       var options = "";
+          $.each( data, function( i, option ) {
+            options += "<option class=\"opSub\" value='" + option.id + "'>" + option.name + "</option>";
+          });
+          $("#subspecie").append(options);
+          $('#subspecie').val("{{params.subspecie}}");
+       }
+     });
+  }
+
+  $('#specie').change(function(){
+    var seleccion = $("#specie").val();
+    if (seleccion != '') {
+      $.ajax({
+       url: "{{ path('listJsonFlsubspecie') }}",
+       method: "GET",
+       success: function(data) {
+         var options = "";
+            $.each( data, function( i, option ) {
+              if (option.idSpecie == seleccion) {
+                options += "<option class=\"opSub\" value='" + option.id + "'>" + option.name + "</option>";
+              }
+            });
+            if (options != "") {
+              $(".opSub").remove();
+              $("#subspecie").append(options);
+            }
+         }
+      });
+    }
+    else{
+      $(".opSub").remove();
+      setSubspecies();
+    }
+  });
+
+
 </script>
 {% endblock %}
+
