--- a/app/Resources/views/fauna/edit.html.twig
+++ b/app/Resources/views/fauna/edit.html.twig
@@ -1,21 +1,29 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Editar individuo de fauna {% endblock %}
+
+{% block stylesheets %}
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
-    <h1>Fauna edit</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 col-center">
+        <h1 class="text-center">Editar individuo de fauna</h1>
+        <br>
+        <br>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+        {{ form_start(edit_form, { 'enctype':"multipart/form-data"}) }}
+          {{ form_widget(edit_form) }}
+            
+          <div class="text-center">
+            <input type="submit" class="btn btn-success btn-md mt-lg-3" value="Guardar cambios" />
+            <a class="btn btn-primary btn-md mt-lg-3 ml-md-1" href="{{ path('fauna_index') }}">Volver al listado</a>
+          </div>
+        {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('fauna_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+      </div>
+    </div>
+  </div>
 {% endblock %}
