--- a/app/Resources/views/fauna/show.html.twig
+++ b/app/Resources/views/fauna/show.html.twig
@@ -9,32 +9,43 @@
     <div class="col-md-10 col-center">
       <h1 class="text-center">{{ fauna.name }}</h1>
       <br>
-      <h3 class="text-center">{{ fauna.subspecie.specie }}, {{ fauna.subspecie }}</h3>
-      <br>
 
       <div class="row">
         <div class="col-md-6">
           <ul class="list-group">
+            <li class="list-group-item"><b>Especie:</b> {{ fauna.subspecie.specie }} </li>
+            <li class="list-group-item"><b>Subespecie:</b> {{ fauna.subspecie }} </li>
             <li class="list-group-item"><b>Peso:</b> {{ fauna.weight }} kg.</li>
             <li class="list-group-item"><b>Observaciones de salud:</b> {{ fauna.healthObservations }}</li>
             <li class="list-group-item">
-               <b>Encargado/s:</b> 
-                  {% for attendant in fauna.attendants %}
-                    {{ attendant.name }}
-                  {% endfor %}
+              <b>Encargado/s</b>
+              <ul>
+                {% for attendant in fauna.attendants %}
+                  <li>{{ attendant.name }}</li>
+                {% endfor %}
+              </ul>
             </li>
             <li class="list-group-item">
               <b>Próximo destino</b><br>
               &emsp;<b>Lugar:</b> {% if fauna.destination is null %} <i class="text-muted">No se ha definido</i> {% else %} {{ fauna.destination }} {% endif %} <br>
-              &emsp;<b>Fecha:</b> {% if fauna.departureDate is null %} <i class="text-muted">No se ha definido</i> {% else %} $row['{{ fauna.departureDate}}']->format('d/m/Y') {% endif %} <br>
+              &emsp;<b>Fecha:</b> {% if fauna.departureDate is null %} <i class="text-muted">No se ha definido</i> {% else %} {{ fauna.departureDate}} {% endif %} <br>
             </li>
           </ul>
         </div>
 
         <div class="col-md-6">
-          <div class="card" style="height: 100%">
-            <div class="card-body">
-              Acá va la imagen
+          <div class="card">
+            <div class="card-body" style="height:340px">
+              <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                  {% if fauna.image is null %}
+                    <i class="text-muted">No se ha cargado una imagen</i>
+                  {% else %}
+                    <img src="/uploads/{{fauna.image}}" alt='Imagen del individuo de fauna' class='img-rounded'>
+                  {% endif %}
+                </div>
+              </div>
             </div>
           </div>
         </div>
