--- a/web/bootstrap/css/style.css
+++ b/web/bootstrap/css/style.css
@@ -22,6 +22,12 @@ p {
     margin-right: 5%;
 }
 
+.img-rounded {
+    width: 300px;
+    height: 300px;
+    border-radius:150px;
+}
+
 /*------------------------------------*\
   NAV
 \*------------------------------------*/
