--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -97,6 +97,25 @@
         <div id="line"></div>
       </nav>
 
+      {% if success is defined %}
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {{success}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endif %}
+
+      {% if error is defined %}
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{error}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endif %}
+
+
       <section class="principal">
         {% block body %}{% endblock %}
       </section>
