Cambios en la vista del new y del edit de individuos

--- a/app/Resources/views/fauna/edit.html.twig
+++ b/app/Resources/views/fauna/edit.html.twig
@@ -27,3 +27,13 @@
     </div>
   </div>
 {% endblock %}
+
+{% block javascripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script>
+  $(document).ready(function() {
+    jQuery(".select2").select2();
+    $('#appbundle_fauna_subspecie').removeAttr('disabled');
+ })
+</script> 
+{% endblock %}
