--- a/app/Resources/views/fauna/edit.html.twig
+++ b/app/Resources/views/fauna/edit.html.twig
@@ -16,7 +16,7 @@
 
         {{ form_start(edit_form, { 'enctype':"multipart/form-data"}) }}
           {{ form_widget(edit_form) }}
-            
+
           <div class="text-center">
             <input type="submit" class="btn btn-success btn-md mt-lg-3" value="Guardar cambios" />
             <a class="btn btn-primary btn-md mt-lg-3 ml-md-1" href="{{ path('fauna_index') }}">Volver al listado</a>
@@ -34,6 +34,24 @@
   $(document).ready(function() {
     jQuery(".select2").select2();
     $('#appbundle_fauna_subspecie').removeAttr('disabled');
- })
-</script> 
+ });
+</script>
+<script>
+  $(document).ready(function(){
+    $.ajax({
+     url: "{{ path('listJsonFasubspecie') }}",
+     method: "GET",
+     success: function(data) {
+          var id_subspecie=$('#appbundle_fauna_subspecie').val();
+          $.each( data, function( i, option ) {
+            if (option.id == id_subspecie) {
+              var id_specie=option.idSpecie;
+              $('#appbundle_fauna_specie').val(id_specie);
+            }
+          });
+
+       }
+    });
+  });
+</script>
 {% endblock %}
