--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -97,6 +97,29 @@
         <div id="line"></div>
       </nav>
 
+      {% for message in app.flashes('error') %}
+      <div class="flash-notice">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          {{message}}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+      {% endfor %}
+
+      {% for message in app.flashes('success') %}
+      <div class="flash-notice">
+        <div class="flash-notice">
+          <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
 
 
       <section class="principal">
