cambios varios, agregado el enviar contraseña por mail a un usuario nuevo, mas funcionalidad de permisos agregado, sacado un atributo inutil del usuario (color) y acomodado el redireccionamiento cuando se meten por URL sin permisos

--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -1,10 +1,16 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% block fos_user_content %}
+{% block body %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-7 col-center">
     <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
     {% if targetUrl %}
-    <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
+    <p><a href="{{ path("homepage") }}">Menu principal</a></p>
     {% endif %}
-{% endblock fos_user_content %}
+    </div>
+  </div>
+</div>
+{% endblock body %}
