--- a/app/Resources/views/fauna/edit.html.twig
+++ b/app/Resources/views/fauna/edit.html.twig
@@ -49,8 +49,52 @@
               $('#appbundle_fauna_specie').val(id_specie);
             }
           });
+          $.ajax({
+           url: "{{ path('listJsonFasubspecie') }}",
+           method: "GET",
+           success: function(data) {
+                var id_specie=$('#appbundle_fauna_specie').val();
+                $.each( data, function( i, option ) {
+                  if (option.idSpecie != id_specie) {
+                    $("#appbundle_fauna_subspecie option[value ="+option.id+"]").remove();
+                  }
+                });
 
+             }
+          });
        }
+    });
+  });
+</script>
+
+<script>
+  $(document).ready(function() {
+
+    // ids autogenerados por el bundle
+    $('#appbundle_fauna_specie').on('change', function(){
+      // habilito el campo de subespecies y elimino las que haya tenido cargadas
+      $('#appbundle_fauna_subspecie').removeAttr('disabled');
+      $('#appbundle_fauna_subspecie option').remove().end();
+      $('#appbundle_fauna_subspecie').append('<option>Seleccione una subespecie</option>');
+
+      specie_id = $("#appbundle_fauna_specie").val();
+
+      // recupero las nuevas subespecies
+      $.ajax({
+        url: "{{ path('listJsonFasubspecie') }}",
+        method: 'GET',
+        success: function(data) {
+          options = '';
+
+          $.each(data, function(index, option) {
+            if (option.idSpecie == specie_id) {
+              options += "<option class='subspecies-ids' value='" + option.id + "'>" + option.name + "</option>";
+            }
+          });
+
+          $("#appbundle_fauna_subspecie").append(options);
+        }
+      });
     });
   });
 </script>
